[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Gui/Trade/TradingMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Gui/Trade/TradeItemButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Menu_icons/Items/cabbage.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu_icons/Items/carrots.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menu_icons/Items/coal.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menu_icons/Items/axe.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menu_icons/Items/hammer.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menu_icons/Items/iron.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu_icons/Items/nickel.png" type="Texture" id=9]
[ext_resource path="res://Assets/Menu_icons/Items/pickaxe.png" type="Texture" id=10]
[ext_resource path="res://Assets/Menu_icons/Items/potatoes.png" type="Texture" id=11]
[ext_resource path="res://Assets/Menu_icons/Items/saw.png" type="Texture" id=12]
[ext_resource path="res://Assets/Menu_icons/Items/stone.png" type="Texture" id=13]
[ext_resource path="res://Assets/Menu_icons/Items/wheat.png" type="Texture" id=14]
[ext_resource path="res://Assets/Menu_icons/Items/wood.png" type="Texture" id=15]

[node name="TradingMenu" type="Node2D"]
position = Vector2( 2.35936, 2.74676 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )
PlayerInventory = NodePath("ReferenceRect/PlayerTrade/PlayerItems/PlayerInventory")
PlayerInventory_holding = NodePath("PlayerInventoryHolding")
TraderNameLabel = NodePath("ReferenceRect/TownsfolkTrade/PanelContainer/Label")
TraderInventory = NodePath("ReferenceRect/TownsfolkTrade/TownsfolkItems/TownsfolkInventory")
TraderInventory_holding = NodePath("TownsfolkInventoryHolding")
item_button = "res://Scenes/Gui/Trade/TradeItemButton.tscn"

[node name="Container" type="Container" parent="."]
margin_left = -215.0
margin_top = -29.0
margin_right = 224.0
margin_bottom = 97.0

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_left = -216.0
margin_top = -27.6919
margin_right = 226.0
margin_bottom = 98.3081

[node name="TradeControls" type="PanelContainer" parent="ReferenceRect"]
margin_left = 153.874
margin_top = 71.9863
margin_right = 287.874
margin_bottom = 123.986

[node name="VBoxContainer" type="VBoxContainer" parent="ReferenceRect/TradeControls"]
margin_left = 7.0
margin_top = 7.0
margin_right = 127.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="ReferenceRect/TradeControls/VBoxContainer"]
margin_right = 120.0
margin_bottom = 14.0
text = "Options"

[node name="TradingMenu" type="HBoxContainer" parent="ReferenceRect/TradeControls/VBoxContainer"]
margin_top = 18.0
margin_right = 120.0
margin_bottom = 38.0
size_flags_vertical = 3

[node name="CancelTrade" type="Button" parent="ReferenceRect/TradeControls/VBoxContainer/TradingMenu"]
margin_right = 54.0
margin_bottom = 20.0
text = "Cancel"

[node name="ConfirmTrade" type="Button" parent="ReferenceRect/TradeControls/VBoxContainer/TradingMenu"]
margin_left = 58.0
margin_right = 120.0
margin_bottom = 20.0
text = "Confirm"

[node name="PlayerTrade" type="VBoxContainer" parent="ReferenceRect"]
editor/display_folded = true
margin_left = 299.535
margin_top = 3.7272
margin_right = 419.535
margin_bottom = 73.7272

[node name="PanelContainer" type="PanelContainer" parent="ReferenceRect/PlayerTrade"]
editor/display_folded = true
margin_right = 120.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="ReferenceRect/PlayerTrade/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 113.0
margin_bottom = 21.0
text = "Player"

[node name="PlayerItems" type="PanelContainer" parent="ReferenceRect/PlayerTrade"]
margin_top = 32.0
margin_right = 120.0
margin_bottom = 46.0

[node name="PlayerInventory" type="GridContainer" parent="ReferenceRect/PlayerTrade/PlayerItems"]
margin_left = 7.0
margin_top = 7.0
margin_right = 113.0
margin_bottom = 7.0
columns = 4

[node name="HBoxContainer" type="HBoxContainer" parent="ReferenceRect/PlayerTrade"]
margin_top = 50.0
margin_right = 120.0
margin_bottom = 70.0

[node name="PlayerTradePrevPage" type="Button" parent="ReferenceRect/PlayerTrade/HBoxContainer"]
margin_right = 28.0
margin_bottom = 20.0
text = "<<"

[node name="PlayerTradeNextPage" type="Button" parent="ReferenceRect/PlayerTrade/HBoxContainer"]
margin_left = 92.0
margin_right = 120.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = ">>"

[node name="TownsfolkTrade" type="VBoxContainer" parent="ReferenceRect"]
margin_left = 0.839996
margin_top = 2.2133
margin_right = 138.84
margin_bottom = 122.213

[node name="PanelContainer" type="PanelContainer" parent="ReferenceRect/TownsfolkTrade"]
margin_right = 138.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="ReferenceRect/TownsfolkTrade/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 131.0
margin_bottom = 21.0
text = "TownsFolk"

[node name="TownsfolkItems" type="PanelContainer" parent="ReferenceRect/TownsfolkTrade"]
margin_top = 32.0
margin_right = 138.0
margin_bottom = 46.0

[node name="TownsfolkInventory" type="GridContainer" parent="ReferenceRect/TownsfolkTrade/TownsfolkItems"]
margin_left = 7.0
margin_top = 7.0
margin_right = 131.0
margin_bottom = 7.0
columns = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="ReferenceRect/TownsfolkTrade"]
margin_top = 50.0
margin_right = 138.0
margin_bottom = 70.0

[node name="TownsfolkTradePrevPage" type="Button" parent="ReferenceRect/TownsfolkTrade/HBoxContainer2"]
margin_right = 28.0
margin_bottom = 20.0
text = "<<"

[node name="TownsfolkTradeNextPage" type="Button" parent="ReferenceRect/TownsfolkTrade/HBoxContainer2"]
margin_left = 110.0
margin_right = 138.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = ">>"

[node name="IconPreviewPanel" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 364.0
margin_top = 97.3081
margin_right = 508.0
margin_bottom = 273.308
rect_scale = Vector2( 1.36433, 1.38472 )

[node name="PanelContainer" type="PanelContainer" parent="IconPreviewPanel"]
margin_right = 144.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="IconPreviewPanel/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 137.0
margin_bottom = 21.0
text = "Player"

[node name="PlayerItems" type="PanelContainer" parent="IconPreviewPanel"]
margin_top = 32.0
margin_right = 144.0
margin_bottom = 152.0

[node name="PlayerInventory" type="GridContainer" parent="IconPreviewPanel/PlayerItems"]
editor/display_folded = true
margin_left = 7.0
margin_top = 7.0
margin_right = 137.0
margin_bottom = 113.0
custom_constants/vseparation = 6
custom_constants/hseparation = 6
columns = 4

[node name="TradeItemButton" parent="IconPreviewPanel/PlayerItems/PlayerInventory" instance=ExtResource( 2 )]
margin_right = 28.0
margin_bottom = 22.0
icon = ExtResource( 3 )
script = null

[node name="TradeItemButton2" parent="IconPreviewPanel/PlayerItems/PlayerInventory" instance=ExtResource( 2 )]
margin_left = 34.0
margin_right = 62.0
margin_bottom = 22.0
icon = ExtResource( 4 )
script = null

[node name="TradeItemButton3" parent="IconPreviewPanel/PlayerItems/PlayerInventory" instance=ExtResource( 2 )]
margin_left = 68.0
margin_right = 96.0
margin_bottom = 22.0
icon = ExtResource( 5 )
script = null

[node name="TradeItemButton4" parent="IconPreviewPanel/PlayerItems/PlayerInventory" instance=ExtResource( 2 )]
margin_left = 102.0
margin_right = 130.0
margin_bottom = 22.0
icon = ExtResource( 6 )
script = null

[node name="TradeItemButton5" parent="IconPreviewPanel/PlayerItems/PlayerInventory" instance=ExtResource( 2 )]
margin_top = 28.0
margin_right = 28.0
margin_bottom = 50.0
icon = ExtResource( 7 )
script = null

[node name="TradeItemButton6" parent="IconPreviewPanel/PlayerItems/PlayerInventory" instance=ExtResource( 2 )]
margin_left = 34.0
margin_top = 28.0
margin_right = 62.0
margin_bottom = 50.0
icon = ExtResource( 8 )
script = null

[node name="TradeItemButton7" parent="IconPreviewPanel/PlayerItems/PlayerInventory" instance=ExtResource( 2 )]
margin_left = 68.0
margin_top = 28.0
margin_right = 96.0
margin_bottom = 50.0
icon = ExtResource( 9 )
script = null

[node name="TradeItemButton8" parent="IconPreviewPanel/PlayerItems/PlayerInventory" instance=ExtResource( 2 )]
margin_left = 102.0
margin_top = 28.0
margin_right = 130.0
margin_bottom = 50.0
icon = ExtResource( 10 )
script = null

[node name="TradeItemButton9" parent="IconPreviewPanel/PlayerItems/PlayerInventory" instance=ExtResource( 2 )]
margin_top = 56.0
margin_right = 28.0
margin_bottom = 78.0
icon = ExtResource( 11 )
script = null

[node name="TradeItemButton10" parent="IconPreviewPanel/PlayerItems/PlayerInventory" instance=ExtResource( 2 )]
margin_left = 34.0
margin_top = 56.0
margin_right = 62.0
margin_bottom = 78.0
icon = ExtResource( 12 )
script = null

[node name="TradeItemButton11" parent="IconPreviewPanel/PlayerItems/PlayerInventory" instance=ExtResource( 2 )]
margin_left = 68.0
margin_top = 56.0
margin_right = 96.0
margin_bottom = 78.0
icon = ExtResource( 13 )
script = null

[node name="TradeItemButton12" parent="IconPreviewPanel/PlayerItems/PlayerInventory" instance=ExtResource( 2 )]
margin_left = 102.0
margin_top = 56.0
margin_right = 130.0
margin_bottom = 78.0
icon = ExtResource( 14 )
script = null

[node name="TradeItemButton13" parent="IconPreviewPanel/PlayerItems/PlayerInventory" instance=ExtResource( 2 )]
margin_top = 84.0
margin_right = 28.0
margin_bottom = 106.0
icon = ExtResource( 15 )
script = null

[node name="HBoxContainer" type="HBoxContainer" parent="IconPreviewPanel"]
margin_top = 156.0
margin_right = 144.0
margin_bottom = 176.0

[node name="PlayerTradePrevPage" type="Button" parent="IconPreviewPanel/HBoxContainer"]
margin_right = 28.0
margin_bottom = 20.0
text = "<<"

[node name="PlayerTradeNextPage" type="Button" parent="IconPreviewPanel/HBoxContainer"]
margin_left = 116.0
margin_right = 144.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = ">>"

[node name="PlayerInventoryHolding" type="GridContainer" parent="."]
visible = false
margin_left = -281.214
margin_top = 188.612
margin_right = -221.214
margin_bottom = 228.612

[node name="TownsfolkInventoryHolding" type="GridContainer" parent="."]
visible = false
margin_left = -305.469
margin_top = 92.2998
margin_right = -265.469
margin_bottom = 132.3
[connection signal="pressed" from="ReferenceRect/TradeControls/VBoxContainer/TradingMenu/CancelTrade" to="." method="_on_CancelTrade_pressed"]
[connection signal="pressed" from="ReferenceRect/TradeControls/VBoxContainer/TradingMenu/ConfirmTrade" to="." method="_on_ConfirmTrade_pressed"]
[connection signal="pressed" from="ReferenceRect/PlayerTrade/HBoxContainer/PlayerTradePrevPage" to="." method="_on_PlayerTradePrevPage_pressed"]
[connection signal="pressed" from="ReferenceRect/PlayerTrade/HBoxContainer/PlayerTradeNextPage" to="." method="_on_PlayerTradeNextPage_pressed"]
[connection signal="pressed" from="ReferenceRect/TownsfolkTrade/HBoxContainer2/TownsfolkTradePrevPage" to="." method="_on_TownsfolkTradePrevPage_pressed"]
[connection signal="pressed" from="ReferenceRect/TownsfolkTrade/HBoxContainer2/TownsfolkTradeNextPage" to="." method="_on_TownsfolkTradeNextPage_pressed"]
[connection signal="pressed" from="IconPreviewPanel/HBoxContainer/PlayerTradePrevPage" to="." method="_on_PlayerTradePrevPage_pressed"]
[connection signal="pressed" from="IconPreviewPanel/HBoxContainer/PlayerTradeNextPage" to="." method="_on_PlayerTradeNextPage_pressed"]
